NXP-33228: Fix Shibboleth logout redirect URL
Stop relying on session attribute as session has been invalidated, always compute redirect URL instead.